[package]
name = "gemini-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
oauth2 = "4.4.0"
rand = "0.8"
dotenvy = "0.15"
url = "2.5"
tokio-stream = "0.1"
futures-util = "0.3"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[workspace]
